# MCP_Machine_Learning

./: .editorconfig  .gitignore  CLAUDE.md  ML_Lookup.ipynb  README.md  RELEASE_NOTES.md  STANDARDS.md  pyproject.toml  pyrightconfig.json  verify_tool_docstrings.py
.github/workflows/: ci.yml  release.yml  test.yml
install/: install.bat  install.sh  mcp_config_writer.py
servers/ml_advanced/: __init__.py  _adv_helpers.py  _adv_viz.py  engine.py  pyproject.toml  server.py
servers/ml_basic/: __init__.py  _basic_helpers.py  _basic_predict.py  _basic_train.py  engine.py  pyproject.toml  server.py
servers/ml_medium/: __init__.py  _medium_cluster.py  _medium_data.py  _medium_eda.py  _medium_helpers.py  _medium_preprocess.py  _medium_reports.py  _medium_train.py  engine.py  pyproject.toml  server.py
shared/: __init__.py  file_utils.py  handover.py  html_layout.py  html_theme.py  ml_utils.py  patch_validator.py  platform_utils.py  progress.py  project_utils.py  receipt.py  registry.py  version_control.py  workspace_utils.py
tests/: _new_advanced_tests.py  _new_basic_tests.py  _new_medium_tests.py  _new_shared_tests.py  conftest.py  test_ml_advanced.py  test_ml_basic.py  test_ml_medium.py  test_ml_shared.py  test_workspace.py  verify_tool_docstrings.py
tests/fixtures/: classification_messy.csv  classification_simple.csv  clustering_simple.csv  large_10k.csv  regression_messy.csv  regression_simple.csv
