[project]
name = "mcp-machine-learning"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "servers/ml_basic",
    "servers/ml_medium",
    "servers/ml_advanced",
]

[tool.uv.sources]
shared = { path = "shared" }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "ruff>=0.9",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
