[project]
name = "mcp-machine-learning"
version = "0.1.0"
description = "Local-first MCP server for machine learning"
requires-python = "==3.12.*"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "psutil>=5.9",
    "plotly>=5.0",
    "scipy>=1.10",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[project.scripts]
ml-basic = "servers.ml_basic.server:main"
ml-medium = "servers.ml_medium.server:main"
ml-advanced = "servers.ml_advanced.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
omit = ["*/server.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(\\):",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["*.ipynb", "ML_Lookup.ipynb", "install/*.sh", "install/*.bat"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E402", "E501", "F401", "F841"]

[tool.uv]
required-version = ">=0.5"
