[project]
name = "ml-advanced"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "psutil>=5.9",
    "plotly>=5.0",
    "scipy>=1.10",
]

[project.scripts]
ml-advanced = "servers.ml_advanced.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
