[project]
name = "ml-basic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "psutil>=5.9",
    "plotly>=5.0",
]

[project.scripts]
ml-basic = "servers.ml_basic.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["../../servers/ml_basic", "../../shared"]
