[project]
name = "ml-medium"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "psutil>=5.9",
]

[project.scripts]
ml-medium = "servers.ml_medium.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
